plugins {
    id 'java'
}

group 'wwjay.demo'
version '1.0'

sourceCompatibility = 11

repositories {
    maven { url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    implementation 'org.apache.poi:poi-ooxml:4.1.0'
    implementation 'org.springframework:spring-web:5.1.5.RELEASE'
    implementation 'org.springframework.security:spring-security-core:5.1.5.RELEASE'
    implementation 'com.google.zxing:javase:3.3.3'
    implementation 'org.slf4j:slf4j-api:1.7.26'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
}
